[FIX] web: prevent group pager to overflow on columns
The group pager was rendering on top of the previous column if the
window was too narrow.

--- a/addons/web/static/src/scss/list_view.scss
+++ b/addons/web/static/src/scss/list_view.scss
@@ -122,6 +122,7 @@
         }
         .o_group_pager {
             position: relative;
+            width: 138px;
 
             .o_pager {
                 @include o-position-absolute(0, 16px);
